Sale / Fixed the hidden overflow issue

--- a/src/styles/sass/page/admin/create/_auction.scss
+++ b/src/styles/sass/page/admin/create/_auction.scss
@@ -1,3 +1,7 @@
+.auction-page {
+    overflow-y: visible !important;
+}
+
 main.create-auction-page {
     .container {
         @include mq("laptop-wide", max) {
@@ -6,21 +10,21 @@ main.create-auction-page {
         @include mq("phone", max) {
             max-width: 100%;
         }
-    }       
+    }
     section.home {
         div.container {
             display: flex;
             height: 80vh;
             justify-content: center;
             align-items: center;
-            @include mq('phone', max) {
+            @include mq("phone", max) {
                 height: auto;
                 overflow: auto;
             }
         }
         div.createDiv {
             width: 80%;
-            border: 1px solid #ffffff;   
+            border: 1px solid #ffffff;
             padding: 24px;
             position: relative;
             margin-bottom: 20px;
@@ -41,7 +45,7 @@ main.create-auction-page {
             }
             @include mq("tablet", max) {
                 width: 90%;
-            }  
+            }
             @include mq("phone", max) {
                 width: 100%;
                 height: 100vh;
@@ -53,23 +57,23 @@ main.create-auction-page {
                 p.subtitle {
                     text-align: center;
                 }
-            }  
+            }
             div.input_div {
                 width: 80%;
                 margin: auto;
                 div.div1 {
                     display: flex;
-                    flex-direction: row; 
+                    flex-direction: row;
 
-                    &>div {
+                    & > div {
                         width: 48%;
-                        margin: 0 1%;                        
+                        margin: 0 1%;
                     }
                 }
                 div.div2 {
                     display: flex;
                     flex-direction: row;
-                    &>div {
+                    & > div {
                         width: 32%;
                         margin: 0 1%;
                     }
@@ -81,27 +85,27 @@ main.create-auction-page {
                 }
                 @include mq("tablet", max) {
                     width: 100%;
-                }  
+                }
                 @include mq("phone", max) {
                     div.div1 {
                         display: flex;
-                        flex-direction: column;     
-                        &>div {
-                            width: 100%; 
-                            margin: 0;
-                            margin-top: 20px;                     
-                        }
-                    }
-                    div.div2 {
-                        display: flex;
                         flex-direction: column;
-                        &>div {
+                        & > div {
                             width: 100%;
                             margin: 0;
                             margin-top: 20px;
                         }
                     }
-                }  
+                    div.div2 {
+                        display: flex;
+                        flex-direction: column;
+                        & > div {
+                            width: 100%;
+                            margin: 0;
+                            margin-top: 20px;
+                        }
+                    }
+                }
                 div.token_div {
                     display: flex;
                     justify-content: space-between;
@@ -124,7 +128,7 @@ main.create-auction-page {
                             }
                         }
                     }
-                    @include mq('phone', max) {
+                    @include mq("phone", max) {
                         flex-direction: column;
                         input {
                             width: 45%;
@@ -140,8 +144,8 @@ main.create-auction-page {
                     justify-content: center;
                     align-items: center;
                     display: flex;
-                    
-                    @include mq('phone', max) {
+
+                    @include mq("phone", max) {
                         height: 120px;
                     }
                 }
@@ -149,7 +153,7 @@ main.create-auction-page {
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
-                    
+
                     div#select_avatar {
                         width: 80%;
                         .css-1s2u09g-control {
@@ -159,13 +163,13 @@ main.create-auction-page {
                             color: #b5b5b5;
                         }
                     }
-                    @include mq('phone', max) {
+                    @include mq("phone", max) {
                         div#select_avatar {
                             width: 100%;
                         }
                     }
                 }
-                
+
                 div.item {
                     padding: 4px 0;
                     p {
@@ -177,7 +181,7 @@ main.create-auction-page {
                         margin-top: 30px;
                     }
                 }
-                @include mq('phone', max) {
+                @include mq("phone", max) {
                     div.for_desktop {
                         display: none;
                     }
@@ -185,8 +189,8 @@ main.create-auction-page {
                         display: block;
                     }
                 }
-                
-                @include mq('phone', min) {
+
+                @include mq("phone", min) {
                     div.for_desktop {
                         display: block;
                     }
@@ -195,6 +199,6 @@ main.create-auction-page {
                     }
                 }
             }
-        }        
-    } 
+        }
+    }
 }
